# ed

./: .dir-locals.el  .envrc  .gitignore  .sops.yaml  Cargo.toml  Justfile  README.md  default.nix  docker-compose.yaml  flake.nix
.sqlx/: query-0c9ab31810117750d820bc6382450a50bf4eb4aab34d02f1cad9c3a74fd24f3a.json  query-23bb90033592c0bb820ccc44261963fbcce09daf87831da12a911486081c05f8.json  query-27fab5d9f1ff7e39fa7b33a14025d563eceaec6d0648fbe2290aa0f2311a5985.json  query-309076cbc84d9632b642f4ac7cf28da601b4d5a84e1ece76c0149419ddacc307.json  query-33e902c578d312ef70dad8e016ff089136ad422883d6b83ba1b49fb2c6481769.json  query-34d0b00686ff06f4ddd203a5976c3729571e8323971a9943a52d33290ec8e9f7.json  query-41dbf5f921f282356040cc16450ed1c927c566fe0dd94be47460faa4e29430c2.json  query-50a6555c52d838de7fc2b55650ecef98f6af9429ab2a4f01b2c2d942a9cb3d2f.json  query-6e83b5a085ee5e9aa985458ee3dfe2d7b60bf02ab252912bb928a4a7bc1056fb.json  query-89dd17df46897743bc6a06f5d5b798c2bbc9b83d7b0c14b06a09adea0a2f4857.json  query-8fb6f4f42b04c9ccea6fbdfd540833e9957340c26c9e9574e1ae4edacf64ab90.json  query-c02b8fb59e0f5c58da53d95f5f9b07bc608351c7c770fb0b5d6dfd0c9939bc34.json
api/: openapi.yaml
crates/ed-auth/: Cargo.toml
crates/ed-axum/: Cargo.toml
crates/ed-axum-oauth/: Cargo.toml
crates/ed-axum-oauth/src/: client.rs  handler.rs  lib.rs  provider.rs
crates/ed-axum/src/: header.rs  lib.rs  models.rs  types.rs
crates/ed-axum/src/apis/: default.rs
crates/ed-axum/src/server/: mod.rs
crates/ed-clients/: Cargo.toml
crates/ed-clients/src/: claude.rs  client.rs  embeddings.rs  lib.rs  messages.rs  service.rs  share.rs
crates/ed-db/: Cargo.toml
crates/ed-db/.sqlx/: query-120eca75c0ce7066be7162ffa6ad01d23891a3e8092a4b28ad48e98da88ffa8a.json  query-453a90693a2e36dfa3c66917236084fbe19ff880c480ea4ec95e36ca5b24f646.json  query-4c481ad8e8deb97df31b89b5184591640e83d387f311bf3c1e264ae91538edeb.json  query-4e6b8131150f172d91d978aa6e9b6205f741b7e21e530b6862ca00b4489c8ced.json  query-4f9c3f724637604aab7a362032ecaa337938f45a78c622f43d954503af427141.json  query-52fef046880b098d33f0702a995666c5c665fe3f7ba2c81a69e99b9bfcb7a501.json  query-7fe64d28bd5667501aab7f9fea6c7154431e63b75645405f1f6874da9706f86d.json  query-ae67d1be25df977c7f94c6bbd8500a9de33ca5a594468013e5a8515fccdc202b.json  query-eb896e153c6dff461b136cfc21547c530fe99b21abb72ddc0c68d0bd47d6bc8e.json
crates/ed-db/src/: client.rs  lib.rs  query.rs  sql.rs  types.rs
crates/ed-db/src/sql/: delete_simulation.sql  get_corpus.sql  get_fingerprint.sql  get_similarity.sql  get_simulation.sql  get_simulations.sql  insert_corpus.sql  insert_embeddings.sql  insert_fingerprint.sql  insert_simulation.sql
crates/ed-migratedb/: Cargo.toml
crates/ed-migratedb/src/: lib.rs
crates/ed-migratedb/src/migrations/: V1__init.sql  V2__create_api_tables.sql  V2__create_auth_tables.sql  V3__create_api_tables.sql  mod.rs
crates/ed-oauth/: Cargo.toml
crates/ed-types/: Cargo.toml
crates/ed-types/src/: fingerprint.rs  lib.rs
docs/: instructions.md  writeup.md
etc/: compose_init.sql  scram_sha.py
etc/corpora/: example.txt
frontend/: .gitignore  dune-project  index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: Main.re  dune
frontend/src/api/: Api.re  Client.re
frontend/src/components/: AudienceBadge.module.css  AudienceBadge.re  Nav.module.css  Nav.re  ResultView.module.css  ResultView.re
frontend/src/lib/: Confidence.re
frontend/src/router/: Router.re
frontend/src/state/: CorpusContext.re
frontend/src/views/: App.module.css  App.re  Generate.module.css  Generate.re  History.module.css  History.re  Login.module.css  Login.re  Messages.module.css  Messages.re  StyleProfile.module.css  StyleProfile.re  Upload.module.css  Upload.re
lima/: nixos.yaml
nix/: checks.nix  default.nix  lib.nix  shells.nix
nix/lib/: codegen.nix  default.nix  workspace-dependencies.nix
nix/modules/: ed.nix
nix/nixos/: default.nix  deploy.nix  ed-host.nix  ed-lima.nix  ed.secrets.yaml  hosts.nix  secrets.nix  secrets.yaml
nix/nixos/aspects/: application.nix  base.nix  routable.nix  secrets.nix  storage.nix
secrets/: guest.yaml  host.yaml
src/: error.rs  handlers.rs  lib.rs  prompt.rs  router.rs  state.rs
