[workspace]
resolver = "3"
members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "ed-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ed-serve"
path = "bin/serve.rs"

[dependencies]
ed-axum = { workspace = true, features = ["server"] }
ed-clients = { workspace = true }
ed-db = { workspace = true }
ed-migratedb = { workspace = true }
ed-oauth = { workspace = true }
ed-types = { workspace = true }
tern = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
pgvector = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[workspace.dependencies]
ed-axum = { version = "=0.1.0", path = "crates/ed-axum", default-features = false }
ed-clients = { version = "=0.1.0", path = "crates/ed-clients" }
ed-db = { version = "=0.1.0", path = "crates/ed-db" }
ed-migratedb = { version = "=0.1.0", path = "crates/ed-migratedb" }
ed-oauth = { version = "=0.1.0", path = "crates/ed-oauth" }
ed-types = { version = "=0.1.0", path = "crates/ed-types" }

ammonia = "4.1.2"
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = [
  "cookie",
  "query",
  "typed-header",
] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
frunk = "0.4.4"
frunk-enum-core = "0.3.0"
frunk-enum-derive = "0.3.0"
frunk_core = "0.4.4"
frunk_derives = "0.4.4"
futures = "0.3.31"
headers = "0.4.1"
http = "1.4.1"
lazy_static = "1.5.0"
log = "0.4.30"
oauth2 = "5.0.0"
pgvector = "0.4.2"
regex = "1.12.3"
reqwest = "0.13.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_html_form = "0.4.0"
serde_json = "1.0"
simplelog = "0.12.2"
sqlx = { version = "0.9.0", features = ["macros", "postgres", "runtime-tokio"] }
tern = { version = "3.1.5", features = ["cli", "sqlx_postgres"] }
thiserror = "2.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[workspace.dependencies.tokio]
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]
version = "1.52.3"

[workspace.metadata.crane]
name = "ed-api"
