[package]
name = "ed-clients"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
